--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron:package:dir": "electron-builder --dir"
   },
   "dependencies": {
+    "pigpio": "^3.3.1",
     "semver": "^7.6.3"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
   },
   "main": "./src-main/entrypoint.js",
   "build": {
+    "npmRebuild": false,
     "appId": "org.turbowarp.desktop",
     "productName": "TurboWarp",
     "files": [
@@ -78,6 +80,10 @@
       {
         "from": "art/icon.svg",
         "to": "icon.svg"
+      },
+      {
+        "from": "node_modules/pigpio/build/Release/pigpio.node",
+        "to": "static/pigpio.node"
       }
     ],
     "win": {
